--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/parser": "7.5.5",
     "esfuzz": "0.3.1",
     "eslump": "2.0.0",
+    "prettier": "1.18.2",
     "terser": "4.3.3"
   },
   "repository": {
