--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "acorn": "7.0.0",
     "@babel/parser": "7.5.5",
+    "deoptigate": "0.5.0",
     "esfuzz": "0.3.1",
     "eslump": "2.0.0",
     "prettier": "1.18.2",
